--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,94 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
+yarn.lock
+package-lock.json
+pnpm-lock.yaml
 
-# testing
+# Testing
 /coverage
+/.nyc_output
+/cypress/videos
+/cypress/screenshots
 
-# next.js
+# Next.js
 /.next/
 /out/
-
-# production
 /build
+.next/
+next-env.d.ts
 
-# misc
-.DS_Store
-*.pem
+# Production
+/build
+/dist
 
-# debug
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.development
+.env.production
+
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+
+# Database
+/prisma/dev.db
+/prisma/dev.db-journal
+*.sqlite
+*.sqlite3
+
+# IDE/Editors
+.idea/
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+*.sublime-project
+*.sublime-workspace
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+*.swp
+*.swo
+.DS_Store
+Thumbs.db
+.~lock.*
+
+# Logs
+logs
+*.log
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Misc
+.cache/
+tsconfig.tsbuildinfo
+.eslintcache
+.stylelintcache
+.vercel
+.turbo
+storybook-static/
+public/uploads/
+
+# Debug
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Local Netlify folder
+.netlify
