--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.16.0",
     "recharts": "^2.15.2",
     "tsx": "^4.19.3",
