--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-intersection-observer": "^9.16.0",
     "recharts": "^2.15.2",
     "tsx": "^4.19.3",
+    "uuid": "^11.1.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
