--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "prisma": "^6.6.0",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "typescript-eslint": "^8.1.0"
+    "typescript-eslint": "^8.1.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^4.0.14"
   }
 }
