--- a/package.json
+++ b/package.json
@@ -35,13 +35,17 @@
     "@eslint/eslintrc": "^3",
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.0",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "eslint-config-prettier": "^10.1.2",
+    "jsdom": "^27.2.0",
     "prisma": "^6.6.0",
     "tailwindcss": "^4",
     "typescript": "^5",
